[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-suite"
version = "0.1.0"
description = "A suite of protocols, design principles, and paradigms for building agentic software"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
amcp = [
    "cyclopts",
    "loguru",
    "pydantic>=2.0",
    "pydantic-ai",
    "langgraph",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
all = [
    "agentic-suite[amcp]",
    "agentic-suite[dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["amcp", "personified_software"]

[tool.pytest.ini_options]
testpaths = ["amcp", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
