[project]
name = "constraint-decay-replication"
version = "0.1.0"
description = "Replication harness for Constraint Decay paper evaluation (Agentic Suite)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
]

[project.scripts]
evaluation-tables = "constraint_decay.evaluation_tables:main"
evaluation-summary = "constraint_decay.evaluation:main"
evaluation-feature = "constraint_decay.evaluation_feature:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["constraint_decay"]
